feat: add get submission file endpoint